# monorepo

adapters/astra/: README.md  pyproject.toml
adapters/astra/src/bsc_rpa_adapter_astra/: errors.py  pages.py
adapters/chd/: README.md  pyproject.toml
adapters/chd/src/bsc_rpa_adapter_chd/: __init__.py  errors.py  navigation.py  pages.py
adapters/newcon-web/: README.md  pyproject.toml
adapters/newcon-web/src/bsc_rpa_adapter_newcon_web/: __init__.py  errors.py  mfa_providers.py  pages.py  session.py
adapters/outlook/: README.md  pyproject.toml
adapters/outlook/src/bsc_rpa_adapter_outlook/: __init__.py  interfaces.py
adapters/playwright/: README.md  pyproject.toml
adapters/playwright/src/bsc_rpa_adapter_playwright/: __init__.py  playwright.py
adapters/srs-java/: README.md  pyproject.toml
adapters/srs-java/src/bsc_rpa_adapter_srs_java/: __init__.py  errors.py  session.py
adapters/srs-java/src/bsc_rpa_adapter_srs_java/pages/: __init__.py  base.py  initial.py
adapters/srs-web/: README.md  pyproject.toml
adapters/srs-web/src/bsc_rpa_adapter_srs_web/: errors.py
adapters/srs-web/src/bsc_rpa_adapter_srs_web/pages/: __init__.py  base.py  main.py  payslip.py
inclusao-exclusao-apolice/: README.md  pyproject.toml
inclusao-exclusao-apolice/src/bsc_rpa_inclusao_exclusao_apolice/: config.py  main.py  steps.py  tasks.py
inclusao-exclusao-apolice/tests/: Inclusao_6_2026.xlsx  config.yaml
inclusao-exclusao-apolice/tests/local_dbs/: run-1780337530939727400-c509bff1-ee80-4c7d-8710-128ad35e1311.sqlite  run-1780928282433576600-8fda37a7-a12a-43f7-8a21-79987f6977b4.sqlite  run-1780936807819716400-6ebcfeed-dae0-4975-8d39-c832d00aa046.sqlite  run-1780941819657887700-2a027366-e575-4d59-8600-685b48dc868b.sqlite  run-1780941854052028100-c7734130-27ed-4f38-9bd9-c54dcecf9a14.sqlite  run-1781009667463324700-40bf19a7-8dde-4d6a-938b-2eb9ce61dcb0.sqlite  run-1781010142451916800-a425e353-729d-46d1-997a-2eed0af51e0d.sqlite  run-1781101949098078100-538f71d7-acc0-4db0-b49e-5ae708ef2a9b.sqlite
packeges/adapters/astra/: README.md  pyproject.toml
packeges/adapters/astra/src/bsc_rpa_adapter_astra/: errors.py  pages.py
packeges/adapters/chd/: README.md  pyproject.toml
packeges/adapters/chd/src/bsc_rpa_adapter_chd/: __init__.py  errors.py  navigation.py  pages.py
packeges/adapters/newcon-web/: README.md  pyproject.toml
packeges/adapters/newcon-web/src/bsc_rpa_adapter_newcon_web/: __init__.py  errors.py  mfa_providers.py  pages.py  session.py
packeges/adapters/outlook/: README.md  pyproject.toml
packeges/adapters/outlook/src/bsc_rpa_adapter_outlook/: __init__.py  interfaces.py
packeges/adapters/playwright/: README.md  pyproject.toml
packeges/adapters/playwright/src/bsc_rpa_adapter_playwright/: __init__.py  playwright.py
packeges/adapters/srs-java/: README.md  pyproject.toml
packeges/adapters/srs-java/src/bsc_rpa_adapter_srs_java/: __init__.py  errors.py  session.py
packeges/adapters/srs-java/src/bsc_rpa_adapter_srs_java/pages/: __init__.py  base.py  initial.py
packeges/adapters/srs-web/: README.md  pyproject.toml
packeges/adapters/srs-web/src/bsc_rpa_adapter_srs_web/: errors.py
packeges/adapters/srs-web/src/bsc_rpa_adapter_srs_web/pages/: __init__.py  base.py  main.py  payslip.py
packeges/bots/inclusao-exclusao-apolice/: README.md  pyproject.toml
packeges/bots/inclusao-exclusao-apolice/src/bsc_rpa_inclusao_exclusao_apolice/: config.py  main.py  steps.py  tasks.py
packeges/bots/inclusao-exclusao-apolice/tests/: config.yaml
packeges/bots/inclusao-exclusao-apolice/tests/downloads/: FrotaTotal-20260518-1049-5679 (1).xlsx  Inclusao_6_2026.xlsx  Inclusão_ 04_ 2026 05.31.37765770.xlsx  apolicecorretoraseguradora-3126- exportação inclusão.xlsx  apolicecorretoraseguradora-9531- exportação exclusão.xlsx  exportwwapoliceendossos-7619-apólice endosso.xlsx
packeges/bots/inclusao-exclusao-apolice/tests/local_dbs/: run-1780337509755363800-dc0d2b08-dbef-4497-8ff7-1b20ad546507.sqlite  run-1780337590101060200-90896010-a8a5-45fb-aaae-6f6e3b206e9d.sqlite  run-1780930110292794700-7f028442-9b13-42d6-b6e3-e922a51203f0.sqlite  run-1780938499161856000-bb622d93-5daf-4ace-a60c-ceed7d656534.sqlite  run-1781009948018050500-3aac3b3d-fc2d-44d8-9727-ce34fb367638.sqlite  run-1781013085169420700-695ed431-b194-4e16-b8ef-3d4f40396fcb.sqlite  run-1781023672543986900-e9212751-0160-44e4-bb88-c3198937208e.sqlite  run-1781100771380762600-db0f560d-8de2-4cbf-b5fb-a7a90d2ce1ef.sqlite  run-1781100928087130200-0a2a9d03-0e50-44e6-a5a8-269cd377756b.sqlite  run-1781288371755980700-5667af76-4563-43c3-be88-44fd8c257df1.sqlite  run-1781288683411011900-f4b99407-286d-4468-84a1-c1d8fa644ae3.sqlite  run-1781289026514269800-5292ee42-0491-4aab-9796-f76f3f51042c.sqlite  run-1781290501261973400-1741e242-70f2-433c-b368-3bf81d91a1f8.sqlite  run-1781290783362107000-e8ca7d72-4570-40f4-8ed3-2c4970461dd6.sqlite  run-1781290906561066400-5467020d-57b4-41bc-aa97-f4fddc614652.sqlite  run-1781290974848829300-57f47754-b739-41c9-9242-49ec1b787c38.sqlite
scripts/: build.py  deploy.ps1  gen-report-csvs.ps1  initbot.ps1  precommit.ps1
scripts/bot_template/: README.md  pyproject.toml
scripts/bot_template/src/bsc_rpa_example/: config.py  main.py  tasks.py
scripts/bot_template/tests/: config.yaml
