[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bsc-rpa-adapter-newcon-web"
version = "1.3.0"
description = "NewconWeb adapter package for BSC RPA Framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "BSC-BIT" }]
dependencies = [
    "beautifulsoup4>=4.14.2,<5",
    "niquests[speedups]>=3.18.3,<4",
    "lxml>=6.0.2,<7",
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../../"
version-pinning-rule = '=='

[[tool.poetry.source]]
name = "Artifact"
priority = "primary"
url = "https://artifactory.gmfinancial.com/artifactory/api/pypi/remote-pip/simple"

[[tool.poetry.source]]
name = "ArtifactExtra"
priority = "supplemental"
url = "https://artifactory.gmfinancial.com/artifactory/api/pypi/virtual-pypi/simple"
